--- a/css/common.css
+++ b/css/common.css
@@ -2,12 +2,30 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    background-color: rgb(211, 211, 211);
 }
 
+header
+{
+    height: 12vh;
+    font-family: Impact, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans-serif;
+    text-align: center;
+}
+
+nav
+{
+    height: 50vh;
+    background-image: url(../img/kikoshow.jpg);
+    border: 2px solid black;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 
 nav ul
 {
+    margin-top: 4vh; 
     list-style-type: none;
+    background-color: rgba(250, 235, 215, 0);
     text-align: center;
 }
 
@@ -15,7 +33,8 @@ nav li
 {
     display: inline-block;
     width: 4em;
-    border:2px solid black;
+    margin-right: 1vh;
+    border: 2px solid black;
     text-align: center;
     border-radius: 4px;
     background-color: antiquewhite;
@@ -25,11 +44,11 @@ nav li
 nav li a:hover
 {
     color: white;
-    background-color: gray;
-
+    background-color: rgb(86, 84, 84);
+    border-radius: 4px;
 }
 
-a{
+nav a{
     display: inline-block;
     width: 100%;
     text-decoration: none;
