--- a/css/common.css
+++ b/css/common.css
@@ -32,7 +32,7 @@ nav ul
 nav li 
 {
     display: inline-block;
-    width: 4em;
+    width: 5em;
     margin-right: 1vh;
     border: 2px solid black;
     text-align: center;
@@ -53,4 +53,22 @@ nav a{
     width: 100%;
     text-decoration: none;
     color: black;
+}
+
+footer {
+    height: 20vh;
+    float: center;
+    text-align: center;
+}
+
+footer a{
+    margin-top: 4vh;
+    clear: both;
+    margin-right: 1vh;
+    display: inline-block;
+}
+
+footer #copy
+{
+    margin-top: 1vh;
 }
