--- a/css/fotos.css
+++ b/css/fotos.css
@@ -1,8 +1,10 @@
-article h1
+article h2
 {
     text-align: center;
+    font-size:2em;
     height: 5vh;
-    padding: 2vh;
+    padding: 3vh;
+    margin-bottom: 3vh;
 }
 
 
