--- a/css/index.css
+++ b/css/index.css
@@ -1,14 +1,15 @@
-article h1
+article h2
 {
     text-align: center;
+    font-size: 2em;
     height: 5vh;
-    margin-top: 2vh;
+    padding: 2vh;
 }
 
 article h3
 {
     text-align: center;
-    margin-top: 1vh;
+    margin-top: 4vh;
 }
 
 aside{
