--- a/css/common.css
+++ b/css/common.css
@@ -11,7 +11,8 @@ body {
 
 header
 {
-    height: 12vh;
+    height: 20 vh;
+    font-size: 1.75em ;
     font-family: Impact, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans-serif;
     text-align: center;
 }
