--- a/css/contacte.css
+++ b/css/contacte.css
@@ -39,6 +39,7 @@ textarea {
 
 button {
     background-color: #af4c4c;
+    font-family: 'Comic Sans MS';
     color: white;
     margin-left: 17.5vh;       
     padding: 1.5vh 2.5vh;
